htdocs/theme/raw/sass/_custom.scss
// Generic custom css (anything longer than a screen view should have its own component file)

.task-item .link-block .icon {
    margin-left: -8px; //correct alignment
}

.no-results {
    @extend .lead;
    clear: both;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 50px;
}

.wysiwyg {
    label {
        display:block;
    }
    label  + .mce-tinymce {
        width:100%;
    }
}

.toolbar-affix.affix {
    position: fixed;
    top: 70px;
    z-index: 1;
}

.layoutthumb {
    rect {
        fill: #f2f2f2;
        stroke: #ccc;
    }

    svg {
        @media (max-width: $screen-sm-min) {
           zoom: 0.8;
       }
    }
}

.blocktype-radio {
    display: none;
}

// see emaillist.tpl
.email-list {
    display: block;
    @media (min-width: $screen-sm-min) {
        display: inline-block;
        width: 420px;
    }
    @media (min-width: $screen-lg-min) {
        width: 500px;
    }
}

// Styles for select2 in forms
// overriding select2 default styles
.select2-container-multi {
    max-width: 85% !important;
    display: inline-block;
    @media (min-width: $screen-sm-min) {
        width: 420px !important;
    }
    @media (min-width: $screen-lg-min) {
        width: 500px !important;
    }
    &.select2-dropdown-open {
        .select2-choices {
            border-radius: 4px 4px 0 0;
        }
    }
    .select2-choices {
        @include box-shadow(0 1px 1px rgba(0, 0, 0, 0.075) inset);
        border-radius: 4px;
        background-color: #fff;
        border: 1px solid #ccc;
        background-image: none;
        width: 100%;
        .select2-search-choice {
            border: none;
        }
    }
}

// Custom styles for edit collection pages
// See views.tpl and views.json.tpl
.manage-collection-pages {
    .pagelist {
        .select-pages {
            margin: -10px 0 0 0;
            padding-top: 8px;
        }
        .add-pages {
            margin: 5px;
        }
        .error.ui-draggable {
            padding: 10px 15px;
            color: $alert-danger-text;
        }
    }

    .collection-pages {
        .list-group {
            .highlight {
                padding: 20px;
            }
        }
        .single-arrow-up {
            padding-right: 32px;
        }
        .single-arrow-down {
            padding-left: 38px;
        }
    }
}

// Style label institution selection
.institutionselector {
    .form-group label {
        display: inline-block;
        font-weight: bold;
    }
}

// Reset checkout boxes inside col in portfolio export page
.portfolio-export {
    .heading {
        margin-top: 15px;
    }
    .heading-exportable-pages {
        margin-top: 0;
        float: left;
    }
    .btn-group {
        float: right;
    }
}
.exportable-artefacts {
    .row {
        :first-child {
            clear: both;
        }
        border-bottom: 1px solid $list-group-border;
    }
    .checkbox input[type=checkbox] {
        margin-left: 0;
    }
    label {
        margin-bottom: 10px;
    }
}
.exportable-artefact-container {
    padding: 15px 15px 0;
    background-color: rgba($brand-default, 0.2);
}

// Tag result page
.mytags {
    margin-top: 25px;
	.tagfreq.badge {
		background-color: $brand-primary;
	}
    .tag {
        margin-right: 10px;
    }
}
.mytags .selected,
.tag-results .selected {
	font-weight: bold;
    color: $gray;
    .badge {
        background-color: $gray;
    }
}
.tag-results .btn-top-right {
	margin-right: -1px;
	margin-top: -41px;
}
.tag-filters {
	background-color: #f5f5f5;
	padding: 10px 15px;
}
.tag-type {
	font-size: $font-size-large;
}

// reset the padding when the individual font file is collapsed in font install
.individualfiles.form-group {
    padding: 0;
    border-bottom: 0 none;
}

// Login panel
.login-externallink {
    display: inline-block;
}

